--- a/000-default.conf
+++ b/000-default.conf
@@ -1,11 +1,11 @@
 <VirtualHost *:80>
   ServerAdmin niels.vanderstraeten@student.odisee.be
-  DocumentRoot /var/www/html
+  DocumentRoot /var/www/html/wordpress
   
   <Directory /var/www/html/wordpress/>
   AllowOverride All
   </Directory>
   
   ErrorLog $APACHE_LOG_DIR}/error.log
-  CustomLog ${APACHE_LOG_DIR}/access.log
+  CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost *:80>
