--- a/000-default.conf
+++ b/000-default.conf
@@ -6,6 +6,6 @@
   AllowOverride All
   </Directory>
   
-  ErrorLog $APACHE_LOG_DIR}/error.log
+  ErrorLog ${APACHE_LOG_DIR}/error.log
   CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
